# luna-rs

./: .gitignore  .gitrub_activity  Cargo.toml  README.md  bench.sh
bench_results/20260320_125822_-/: cpu.json  gpu.json  meta.json
bench_results/20260320_165741_apple_m3_max/: meta.json
bench_results/20260320_170213_apple_m3_max/: meta.json
bench_results/20260320_170220_apple_m3_max/: meta.json
bench_results/20260320_170851_apple_m3_max/: cpu.json  gpu.json  meta.json
bench_results/20260320_172301_apple_m3_max/: cpu.json  gpu.json  meta.json
data/: sample.csv
examples/: benchmark.rs  channel_invariance.rs  embed.rs  load_and_inspect.rs  quantize.rs  reconstruct.rs
examples/common/: mod.rs
scripts/: export_intermediates.py  export_parity_vectors.py  generate_figures.py
src/: channel_positions.rs  channel_vocab.rs  config.rs  csv_loader.rs  data.rs  encoder.rs  lib.rs  preprocessing.rs  quantize.rs  weights.rs
src/model/: attention.rs  classification_head.rs  cross_attention.rs  encoder_block.rs  feedforward.rs  freq_embed.rs  luna.rs  mod.rs  norm.rs  patch_embed.rs  reconstruction_head.rs  rope.rs
tests/: block_parity.rs  decoder_parity.rs  f64_parity.rs  forward_pass.rs  intermediate_parity.rs  python_parity.rs
